--- a/app/templates/produtos.html
+++ b/app/templates/produtos.html
@@ -3,10 +3,10 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-6">
-            <img src="{{ url_for('static', filename='product1.jpg') }}" class="img-fluid" alt="Produto">
+            <img src="{{ url_for('static', filename='/produtos/iphone14.jpg') }}" class="img-fluid" alt="Produto">
         </div>
         <div class="col-md-6">
-            <h1>Nome do Produto</h1>
+            <h1>Iphone 14 Pro Max</h1>
             <p class="text-muted">Categoria: Tecnologia</p>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut efficitur nulla. Nunc sed nisl vel leo
