tua mae é minha boe

--- a/app/templates/produtos.html
+++ b/app/templates/produtos.html
@@ -9,8 +9,8 @@
             <h1>Iphone 14 Pro Max</h1>
             <p class="text-muted">Categoria: Tecnologia</p>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ut efficitur nulla. Nunc sed nisl vel leo
-                commodo scelerisque vel a libero.
+                O iPhone 14 Pro Max oferece tecnologia avançada e uma poderosa câmera, combinando design 
+                elegante com desempenho excepcional.
             </p>
             <h2 class="mb-3">Especificações</h2>
             <ul class="list-unstyled">
