--- a/app/templates/cadastro.html
+++ b/app/templates/cadastro.html
@@ -7,22 +7,37 @@
       <div class="col-md-6 mx-auto">
         <div class="signup-form">
           <h2>Cadastre-se</h2>
-          <form action="#" method="post">
+          
+          {% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+  {% endif %}
+{% endwith %}
+
+
+          <form action="/cadastro" method="get">
             <div class="form-group">
               <label for="nome">Nome</label>
-              <input type="text" class="form-control" id="nome" name="nome" required>
+              <!-- <input type="text" class="form-control" id="nome" name="nome" required> -->
+              {{ cadastro.nome(type="text", class="form-control", id="nome") }}
             </div>
             <div class="form-group">
               <label for="email">Email</label>
-              <input type="email" class="form-control" id="email" name="email" required>
+              <!-- <input type="email" class="form-control" id="email" name="email" required> -->
+              {{ cadastro.email(type="email", class="form-control", id="email") }}
             </div>
             <div class="form-group">
               <label for="data-nascimento">Data de Nascimento</label>
-              <input type="date" class="form-control" id="data-nascimento" name="data-nascimento" required>
+              <!-- <input type="date" class="form-control" id="data-nascimento" name="data-nascimento" required> -->
+              {{ cadastro.nascimento(type="date", class="form-control", id="data-nascimento") }}
             </div>
             <div class="form-group">
               <label for="senha">Senha</label>
-              <input type="password" class="form-control" id="senha" name="senha" required>
+              <!-- <input type="password" class="form-control" id="senha" name="senha" required> -->
+              {{ cadastro.senha(type="password", class="form-control", id="senha") }}
             </div>
             <button type="submit" class="btn btn-primary btn-block">Cadastrar</button>
           </form>
